# tedge-bridge-harness

./: README.md  docker-compose.yml  errors.md  gen-cert.sh
certs/: c8y.crt  c8y.key  ca.crt  ca.key  device.crt  device.key
fake-c8y/: .dockerignore  Cargo.toml  Dockerfile  mosquitto.conf
fake-c8y/s6-rc.d/fake-c8y/: run
fake-c8y/s6-rc.d/mosquitto/: run
fake-c8y/src/: main.rs
tedge/: .gitignore  Dockerfile
tedge/s6-rc.d/tedge-agent/: run
tedge/s6-rc.d/tedge-mapper-c8y/: run
