[package]
name = "fake-c8y"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-server = { version = "0.6.0", features = ["tokio-rustls", "tls-rustls"] }
futures-util = "0.3.30"
rumqttc = { version = "0.24.0" }
rustls-pemfile = "2.1.2"
serde_json = "1.0.117"
tokio = { version = "1", features = ["macros", "fs", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "*"
